# ros2_press

./: .gitignore  README.md
src/performance_test/: .bazelrc  .gitlab-ci.yml  BUILD.bazel  WORKSPACE.bazel  press.sh  repositories.bzl  setup.bzl
src/performance_test/dockerfiles/: Dockerfile.CycloneDDS  Dockerfile.CycloneDDS-CXX  Dockerfile.FastDDS  Dockerfile.OpenDDS  Dockerfile.iceoryx  Dockerfile.rclcpp
src/performance_test/patches/: fast-dds-gcc-13.patch
src/performance_test/performance_report/: BUILD.bazel  CHANGELOG.md  README.md  package.xml  pytest.ini
src/performance_test/performance_report/cfg/plotter/: plot_many_experiments.yaml  plot_one_experiment.yaml
src/performance_test/performance_report/cfg/reporter/: report_many_experiments.yaml  report_one_experiment.yaml
src/performance_test/performance_report/cfg/runner/: run_many_experiments.yaml  run_one_experiment.yaml
src/performance_test/performance_report/performance_report/: figures.py  generate_experiment_commands.py  generate_plots.py  generate_report.py  logs.py  qos.py  run_experiment.py  utils.py
src/performance_test/performance_test/: BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md  compile_options.cmake  defs.bzl  package.xml
src/performance_test/performance_test/include/performance_test/cli/: cli_parser.hpp
src/performance_test/performance_test/include/performance_test/execution_tasks/: publisher_task.hpp  round_trip_relay_task.hpp  subscriber_task.hpp
src/performance_test/performance_test/msg/: Array128.idl  Array16k.idl  Array1k.idl  Array1m.idl  Array256.idl  Array256k.idl  Array2m.idl  Array32.idl  Array32k.idl  Array4k.idl  Array4m.idl  Array512.idl  Array60k.idl  Array64.idl  Array64k.idl  Array8m.idl  BUILD.bazel  BoundedSequence16k.idl  BoundedSequence1k.idl  BoundedSequence1m.idl  BoundedSequence256k.idl  BoundedSequence2m.idl  BoundedSequence32k.idl  BoundedSequence4k.idl  BoundedSequence4m.idl  BoundedSequence64k.idl  BoundedSequence8m.idl  CMakeLists.txt  FixedHeader.idl  FixedPointField.idl  FixedTime.idl  PointCloud1m.idl  PointCloud2m.idl  PointCloud4m.idl  PointCloud512k.idl  PointCloud8m.idl  Struct16.idl  Struct256.idl  Struct32k.idl  Struct4k.idl  (+4 more)
src/performance_test/performance_test/msg/connextdds/: CMakeLists.txt
src/performance_test/performance_test/msg/cyclonedds/: CMakeLists.txt
src/performance_test/performance_test/msg/cyclonedds-cxx/: CMakeLists.txt
src/performance_test/performance_test/msg/fast_rtps/: CMakeLists.txt
src/performance_test/performance_test/msg/opendds/: CMakeLists.txt
src/performance_test/performance_test/msg/rclcpp/: CMakeLists.txt
src/performance_test/performance_test/plugins/apex_os/: apex_os_communicator.hpp  apex_os_entity_factory.hpp  apex_os_polling_subscription_communicator.hpp  apex_os_runner.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/connextdds/: connext_dds_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/connextdds_micro/: connext_dds_micro_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/cyclonedds/: cyclonedds_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/cyclonedds_cxx/: cyclonedds_cxx_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/demo/: BUILD.bazel  README.md  plugin_factory.cpp  plugin_impl.hpp  publisher_impl.hpp  subscriber_impl.hpp
src/performance_test/performance_test/plugins/demo/msg/: array16k.hpp  (+1 more)
src/performance_test/performance_test/plugins/fastdds/: fast_rtps_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/iceoryx/: iceoryx_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/opendds/: opendds_communicator.hpp  plugin_factory.cpp  plugin_impl.hpp
src/performance_test/performance_test/plugins/rclcpp_common/: rclcpp_publisher.hpp  rclcpp_resource_manager.hpp  ros2_qos_adapter.hpp
src/performance_test/performance_test/plugins/ros2/: plugin_factory.cpp  plugin_impl.hpp  rclcpp_callback_communicator.hpp  rclcpp_waitset_communicator.hpp
src/performance_test/performance_test/src/: main.cpp
src/performance_test/performance_test/src/cli/: cli_parser.cpp
src/performance_test/performance_test/src/execution_tasks/: publisher_task.cpp  round_trip_relay_task.cpp  subscriber_task.cpp
src/performance_test/performance_test/src/experiment_configuration/: experiment_configuration.cpp  qos_abstraction.cpp  round_trip_mode.cpp
src/performance_test/performance_test/src/experiment_execution/: data_entity_runner.cpp  inter_thread_runner.cpp  intra_thread_runner.cpp  pub_sub_factory.cpp  round_trip_main_runner.cpp  round_trip_relay_runner.cpp  runner.cpp  runner_factory.cpp
src/performance_test/performance_test/src/experiment_metrics/: analysis_result.cpp  publisher_stats.cpp  subscriber_stats.cpp
src/performance_test/performance_test/src/outputs/: csv_output.cpp  json_output.cpp  output_factory.cpp  stdout_output.cpp
src/performance_test/performance_test/src/utilities/: exit_request_handler.cpp  external_info.cpp  memory_checker.cpp  prevent_cpu_idle.cpp  rt_enabler.cpp
src/performance_test/performance_test/test/src/: test_sample_statistics.cpp
src/performance_test/performance_test_ros1_msgs/: package.xml
src/performance_test/performance_test_ros1_msgs/msg/: Array128.msg  Array16k.msg  Array1k.msg  Array1m.msg  Array256.msg  Array256k.msg  Array2m.msg  Array32.msg  Array32k.msg  Array4k.msg  Array4m.msg  Array512.msg  Array60k.msg  Array64.msg  Array64k.msg  Array8m.msg
src/performance_test/performance_test_ros1_publisher/: package.xml
src/performance_test/performance_test_ros1_publisher/include/performance_test_ros1_publisher/: msg_types.hpp
src/performance_test/plotter/: BUILD.bazel  MANIFEST.in  README.md  plot_logs.ipynb  setup.py
src/performance_test/plotter/plotter/: __init__.py  apex_performance_plotter.py  load_logfiles.py
(+47 files in other folders)
