# Copyright 2024 Apex.AI, Inc.
# All rights reserved.

workspace(name = "performance_test")

load("//:repositories.bzl", "load_repositories")

load_repositories()

load("//:setup.bzl", "setup_repositories")

setup_repositories()

load("//third_party/python:parse_pip.bzl", "parse_pip")

parse_pip()

load("//third_party/python:install_pip.bzl", "install_pip")

install_pip()
