# Copyright 2024 Apex.AI, Inc.
# All rights reserved.

load("//performance_test:defs.bzl", "performance_test_with_plugin")

performance_test_with_plugin(
    name = "performance_test",
    plugin = "//:plugin_implementation"
)

performance_test_with_plugin(
    name = "performance_test_demo",
    plugin = "//performance_test/plugins/demo:demo_plugin"
)

cc_library(
    name = "performance_test_lib",
    hdrs = glob(["include/**/*.hpp"]),
    srcs = glob(["src/**/*.cpp"]),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@rapidjson",
        "@sole",
        "@tabulate",
        "@tclap",
    ],
)

filegroup(
    name = "performance_test_main",
    srcs = ["src/main.cpp"],
    visibility = ["//visibility:public"],
)
