# Copyright 2024 Apex.AI, Inc.
# All rights reserved.

filegroup(
    name = "idl_messages_array",
    srcs = [
        "Array32.idl",
        "Array64.idl",
        "Array128.idl",
        "Array256.idl",
        "Array512.idl",
        "Array1k.idl",
        "Array4k.idl",
        "Array16k.idl",
        "Array32k.idl",
        "Array60k.idl",
        "Array64k.idl",
        "Array256k.idl",
        "Array1m.idl",
        "Array2m.idl",
        "Array4m.idl",
        "Array8m.idl",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "idl_messages_struct",
    srcs = [
        "Struct16.idl",
        "Struct256.idl",
        "Struct4k.idl",
        "Struct32k.idl",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "idl_messages_point_cloud",
    srcs = [
        "FixedTime.idl",
        "FixedHeader.idl",
        "FixedPointField.idl",
        "PointCloud512k.idl",
        "PointCloud1m.idl",
        "PointCloud2m.idl",
        "PointCloud4m.idl",
        "PointCloud8m.idl",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "idl_messages_bounded_sequence",
    srcs = [
        "BoundedSequence1k.idl",
        "BoundedSequence4k.idl",
        "BoundedSequence16k.idl",
        "BoundedSequence32k.idl",
        "BoundedSequence64k.idl",
        "BoundedSequence256k.idl",
        "BoundedSequence1m.idl",
        "BoundedSequence2m.idl",
        "BoundedSequence4m.idl",
        "BoundedSequence8m.idl",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "idl_messages_unbounded_sequence",
    srcs = [
        "UnboundedSequence.idl",
        "UnboundedString.idl",
    ],
    visibility = ["//visibility:public"],
)
